--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       </div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>   
+    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-database.js"></script>
     <script src="formSubmit.js"></script>
   </body>
 </html>
