added form message

--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
                     </div>
                   </div>
                 </form>
+                <div class="level mt-3">
+                  <div class="level-right">
+                    <div class="level-item">
+                      <p class="is-size-5-desktop is-size-7-mobile">
+                        And add ideas to our communal bucket list&nbsp;
+                      </p>
+                      <a
+                        class="is-size-5-desktop is-size-7-mobile"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSeYdlpgX4p1f_0AJ_tBctULUfyVcDvqwDvkNfRLbPD827Ks6A/viewform?usp=sf_link"
+                      >
+                        here!</a
+                      >
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
