--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
             <div class="column is-two-thirds is-offset-2">
               <div class="box has-background-info-light">
                 <h1
-                  class="title is-size-1-desktop is-size-3-mobile as-text-grey-light has-text-weight-bold is-family-sans-serif"
+                  class="
+                    title
+                    is-size-1-desktop is-size-3-mobile
+                    as-text-grey-light
+                    has-text-weight-bold
+                    is-family-sans-serif
+                  "
                 >
                   Want to learn more about Penn Bucket? Add your email to our
                   Listserv!
@@ -65,6 +71,17 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="hero-foot has-text-centered">
+        <p
+          class="
+            is-size-6-desktop is-size-7-mobile is-italic
+            has-text-white-ter
+            mb-1
+          "
+        >
+          Penn Bucket is a student group at the University of Pennsylvania
+        </p>
       </div>
     </section>
 
